--- a/project1/project1_gui.ui
+++ b/project1/project1_gui.ui
@@ -6,32 +6,78 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>868</width>
-    <height>504</height>
+    <width>941</width>
+    <height>490</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <widget class="QPushButton" name="Readsensor">
+  <widget class="QLabel" name="read_data_out">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>360</y>
-     <width>125</width>
-     <height>36</height>
+     <x>60</x>
+     <y>370</y>
+     <width>811</width>
+     <height>41</height>
     </rect>
    </property>
    <property name="text">
-    <string>Read Sensor</string>
+    <string>Sensor data</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="tempgraphButton">
+  <widget class="QLabel" name="status_out">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>50</y>
-     <width>171</width>
+     <x>60</x>
+     <y>430</y>
+     <width>811</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Sensor Status</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="temp_limit_in">
+   <property name="geometry">
+    <rect>
+     <x>580</x>
+     <y>80</y>
+     <width>91</width>
+     <height>38</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="hum_limit_in">
+   <property name="geometry">
+    <rect>
+     <x>580</x>
+     <y>140</y>
+     <width>91</width>
+     <height>38</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="read_data_btn">
+   <property name="geometry">
+    <rect>
+     <x>50</x>
+     <y>290</y>
+     <width>331</width>
+     <height>61</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Read Temperature and Humidity</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="plot_temp_btn">
+   <property name="geometry">
+    <rect>
+     <x>50</x>
+     <y>120</y>
+     <width>211</width>
      <height>31</height>
     </rect>
    </property>
@@ -39,12 +85,12 @@
     <string>Plot Temperature</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton_2">
+  <widget class="QPushButton" name="plot_hum_btn">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>160</y>
-     <width>171</width>
+     <x>50</x>
+     <y>190</y>
+     <width>211</width>
      <height>31</height>
     </rect>
    </property>
@@ -52,20 +98,82 @@
     <string>Plot Humidity</string>
    </property>
   </widget>
-  <widget class="QLabel" name="Statuslabel">
+  <widget class="QLabel" name="alarm_message">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>270</y>
-     <width>301</width>
-     <height>51</height>
+     <x>760</x>
+     <y>90</y>
+     <width>171</width>
+     <height>81</height>
     </rect>
    </property>
    <property name="text">
-    <string>Status</string>
+    <string>Alarm Message</string>
    </property>
-   <property name="alignment">
-    <set>Qt::AlignCenter</set>
+  </widget>
+  <widget class="QPushButton" name="setlimits_btn">
+   <property name="geometry">
+    <rect>
+     <x>510</x>
+     <y>210</y>
+     <width>125</width>
+     <height>36</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Set Limits</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_4">
+   <property name="geometry">
+    <rect>
+     <x>350</x>
+     <y>90</y>
+     <width>231</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Max Temperature Limit:</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_5">
+   <property name="geometry">
+    <rect>
+     <x>380</x>
+     <y>150</y>
+     <width>191</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Max Humidty Limit:</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_6">
+   <property name="geometry">
+    <rect>
+     <x>680</x>
+     <y>60</y>
+     <width>31</width>
+     <height>81</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>*C</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_7">
+   <property name="geometry">
+    <rect>
+     <x>680</x>
+     <y>120</y>
+     <width>31</width>
+     <height>81</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>%</string>
    </property>
   </widget>
  </widget>
